--- a/src/Layout/DefaultLayout/DefaultSlider/DefaultSlider.module.scss
+++ b/src/Layout/DefaultLayout/DefaultSlider/DefaultSlider.module.scss
@@ -2,3 +2,116 @@
     width: 10%;
     font-size: 1.4rem;
 }
+
+.sliderRouter {
+    height: 400px;
+}
+
+.bg {
+    width: 100%;
+    height: 400px;
+    background-image: url('../../../assets/images/Introduce/Slider/breadcumb-bg-2.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    &::before {
+        content: '';
+        position: absolute;
+        background-color: var(--title-color);
+        width: 100%;
+        height: 100%;
+        opacity: 0.8;
+        z-index: 1;
+        transition: opacity 0.3s ease;
+    }
+}
+
+.shape1 {
+    position: absolute;
+    background-image: url("../../../assets/images/Introduce/Slider/breadcumb_shape_1_1.png");
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.shape2 {
+    position: absolute;
+    background-image: url("../../../assets/images/Introduce/Slider/breadcumb_shape_1_2.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 145px;
+    height: 77px;
+    right: 30px;
+    bottom: 30px;
+    animation: jumpAni 5s linear infinite;
+    z-index: 1;
+    
+}
+
+.shape3 {
+    position: absolute;
+    background-image: url("../../../assets/images/Introduce/Slider/breadcumb_shape_1_3.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 30px;
+    height: 75px;
+    left: 50px;
+    bottom: 30px;
+    animation: jumpAni 5s linear infinite;
+    z-index: 1;
+}
+
+@keyframes jumpAni {
+    0% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-30%);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes jumpReverseAni {
+    0% {
+        bottom: 5%;
+    }
+    40% {
+        bottom: 2%;
+    }
+    100% {
+        bottom: 5%;
+    }
+}
+
+@keyframes jumpReverseAni2 {
+    0% {
+        bottom: -1%;
+    }
+    40% {
+        bottom: -5%;
+    }
+    100% {
+        bottom: -1%;
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
