--- a/src/Layout/DefaultLayout/Header/HeaderNav/HeaderNav.module.scss
+++ b/src/Layout/DefaultLayout/Header/HeaderNav/HeaderNav.module.scss
@@ -125,7 +125,7 @@
 
 .actions {
     display: flex;
-    gap: 20px;
+    gap: 15px;
     padding: 0 12px;
 }
 
@@ -155,6 +155,11 @@
     min-width: 270px !important;
 }
 
+.Header-navbars-menu__mbtl {
+    display: none;
+    gap: 15px;
+}
+
 //==============================Responsive styles==============================
 // Mobile nhỏ (dưới 480px)
 @media (max-width: 480px) {
@@ -172,8 +177,20 @@
         display: none;
     }
 
+    .logo {
+        padding: 0 12px;
+
+        .img {
+            width: 70%;
+            height: auto;
+        }
+    }
+
     // Thêm Menu Mobile
     .Header-navbars-menu__mbtl {
+        display: flex;
+        align-items: center;
+        gap: 15px;
         padding: 0 12px;
     }
 
@@ -208,11 +225,49 @@
         }
     }
 
+    .actions-search-sub {
+        min-width: 300px;
+        min-height: 50px;
+        background-color: var(--white-color);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.15);
+        border-radius: 8px;
+        padding: 20px 10px;
+        animation: var(--animation-fadeIn);
+        transition: opacity 0.3s ease, transform 0.3s ease;
+    }
+
+    .search-input {
+        width: 70%;
+        height: 50%;
+        border: 1px solid #cacaca;
+        padding: 12px 10px;
+        border-top-left-radius: 8px;
+        border-bottom-left-radius: 8px;
+    }
+
+    .btn-submit {
+        width: 20%;
+        height: 45px;
+        border: none;
+        cursor: pointer;
+        transition: var(--transition);
+        background-color: #0d5ef4;
+        border-top-right-radius: 8px;
+        border-bottom-right-radius: 8px;
+    }
+
+    .icon-submit {
+        font-size: 1.6rem;
+        color: var(--white-color);
+    }
+
     .header-navbars-menu__mbtl-list {
-        overflow-y: scroll;
+        // overflow-y: scroll;
         max-height: calc(100vh - 200px);
-        padding: 40px;
-        margin-top: 20px;
+        padding: 10px 40px;
         text-align: left;
         background-color: var(--white-color);
     }
@@ -253,7 +308,223 @@
     }
 
     .submenu {
+        .submenu-item {
+            border-bottom: 1px solid #fdedf1;
+            padding: 12px 0;
+            padding-left: 20px;
 
+            .icon-angleRight {
+                margin-right: 10px;
+                font-size: 1.4rem;
+            }
+        }
+    }
+
+    .custom-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        display: flex;
+        justify-content: start !important;
+        align-items: unset !important;
+        z-index: 999999;
+        transition: var(--transition);
+        animation: fadeIn 0.5s ease !important;
+    }
+
+    .custom-modal {
+        width: 72%;
+        padding: 0 !important;
+        border-radius: 0px !important;
+        border-right: 3px solid var(--theme-color);
+        animation: slideRightToLeft 1s ease !important;
+        transform: translateX(-105%);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s linear 0.3s;
+    }
+
+    .show {
+        opacity: 1;
+        visibility: visible;
+        transform: translateX(0);
+        transition-delay: 0s;
+    }
+
+    .custom-content {
+        margin: 0 !important;
+    }
+
+    .custom-btn {
+        position: absolute;
+        top: 25px !important;
+        right: -17.5px !important;
+        color: var(--white-color);
+        background-color: var(--theme-color) !important;
+        border-radius: 50%;
+        width: 33px;
+        height: 33px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    @keyframes fadeIn {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+
+    @keyframes slideRightToLeft {
+        0% {
+            transform: translateX(-100%);
+        }
+        100% {
+            transform: translateX(0);
+        }
+    }
+
+    @keyframes slideDown {
+        from {
+            max-height: 0;
+            opacity: 0;
+            transform: translateY(-10px);
+        }
+        to {
+            max-height: 200px; /* Điều chỉnh tùy nội dung */
+            opacity: 1;
+            transform: translateX(0);
+        }
+    }
+
+    @keyframes slideUp {
+        from {
+            max-height: 200px;
+            opacity: 1;
+            transform: translateX(0);
+        }
+        to {
+            max-height: 0;
+            opacity: 0;
+            transform: translateY(-10px);
+        }
+    }
+}
+
+// Tablet (768px trở xuống)
+@media (max-width: 768px) and (min-width: 480px) {
+    .menu {
+        display: flex;
+        padding: 0 12px;
+        display: none;
+    }
+
+    .link {
+        padding: 0;
+    }
+
+    .actions {
+        display: none;
+    }
+
+    .logo {
+        padding: 0 12px;
+
+        .img {
+            width: 50%;
+            height: auto;
+        }
+    }
+
+    // Thêm Menu Mobile
+    .Header-navbars-menu__mbtl {
+        display: flex;
+        gap: 15px;
+        padding: 0 12px;
+    }
+
+    .Header-navbars-menu__mbtl-btn {
+        width: 50px;
+        height: 50px;
+        line-height: 50px;
+        padding: 0;
+        font-size: 20px;
+        border: none;
+        background-color: var(--theme-color);
+        color: var(--white-color);
+        display: inline-block;
+        border-radius: 5px;
+        text-align: center;
+
+        .icon-bars {
+            width: 17px;
+            height: 20px;
+            color: var(--white-color);
+        }
+    }
+
+    .logo-mobile {
+        display: block;
+        text-align: center;
+        padding: 40px 0 30px;
+        background-color: rgba(28, 185, 200, 0.1);
+
+        .img {
+            width: 240px;
+        }
+    }
+
+    .header-navbars-menu__mbtl-list {
+        // overflow-y: scroll;
+        max-height: calc(100vh - 200px);
+        padding: 10px 40px;
+        text-align: left;
+        background-color: var(--white-color);
+    }
+
+    .item-mobile {
+        padding: 12px 0;
+        border-bottom: 1px solid #fdedf1;
+
+        .item-mobile__wrap {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .link-mobile {
+            font-size: 1.6rem;
+            color: var(--title-color);
+            font-weight: 400;
+            text-transform: capitalize;
+
+            .icon-angleRight {
+                margin-right: 10px;
+                font-size: 1.4rem;
+            }
+        }
+
+        .icon-toggle {
+            font-size: 1.2rem;
+            padding: 5px;
+            background-color: #f3f7fb;
+            border-radius: 50%;
+            transition: var(--transition);
+        }
+    }
+
+    .item-mobile:last-child {
+        border-bottom: none;
+    }
+
+    .submenu {
         .submenu-item {
             border-bottom: 1px solid #fdedf1;
             padding: 12px 0;
@@ -280,12 +551,22 @@
     }
 
     .custom-modal {
-        width: 72%;
+        width: 40%;
         padding: 0 !important;
         border-radius: 0px !important;
         border-right: 3px solid var(--theme-color);
-        transition: var(--transition);
-        animation: slideRightToLeft 0.5s ease !important;
+        animation: slideRightToLeft 1s ease !important;
+        transform: translateX(-105%);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s linear 0.3s;
+    }
+
+    .show {
+        opacity: 1;
+        visibility: visible;
+        transform: translateX(0);
+        transition-delay: 0s;
     }
 
     .custom-content {
@@ -325,15 +606,15 @@
         to {
             max-height: 200px; /* Điều chỉnh tùy nội dung */
             opacity: 1;
-            transform: translateY(0);
+            transform: translateX(0);
         }
     }
-    
+
     @keyframes slideUp {
         from {
             max-height: 200px;
             opacity: 1;
-            transform: translateY(0);
+            transform: translateX(0);
         }
         to {
             max-height: 0;
@@ -343,12 +624,219 @@
     }
 }
 
-// Tablet (768px trở xuống)
-@media (max-width: 768px) {
-}
-
 // Laptop nhỏ (1024px trở xuống)
-@media (max-width: 1024px) {
+@media (max-width: 1024px) and (min-width: 768px) {
+    .wrapper {
+        max-width: var(--main-container);
+        height: 100%;
+        margin: 0 24px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .menu {
+        display: flex;
+        padding: 0 12px;
+        display: none;
+    }
+
+    .link {
+        padding: 0;
+    }
+
+    .actions {
+        display: none;
+    }
+
+    .logo {
+        padding: 0 12px;
+
+        .img {
+            width: 50%;
+            height: auto;
+        }
+    }
+
+    // Thêm Menu Mobile
+    .Header-navbars-menu__mbtl {
+        display: flex;
+        gap: 15px;
+        padding: 0 12px;
+    }
+
+    .Header-navbars-menu__mbtl-btn {
+        width: 50px;
+        height: 50px;
+        line-height: 50px;
+        padding: 0;
+        font-size: 20px;
+        border: none;
+        background-color: var(--theme-color);
+        color: var(--white-color);
+        display: inline-block;
+        border-radius: 5px;
+        text-align: center;
+
+        .icon-bars {
+            width: 17px;
+            height: 20px;
+            color: var(--white-color);
+        }
+    }
+
+    .logo-mobile {
+        display: block;
+        text-align: center;
+        padding: 40px 0 30px;
+        background-color: rgba(28, 185, 200, 0.1);
+
+        .img {
+            width: 240px;
+        }
+    }
+
+    .header-navbars-menu__mbtl-list {
+        // overflow-y: scroll;
+        max-height: calc(100vh - 200px);
+        padding: 10px 40px;
+        text-align: left;
+        background-color: var(--white-color);
+    }
+
+    .item-mobile {
+        padding: 12px 0;
+        border-bottom: 1px solid #fdedf1;
+
+        .item-mobile__wrap {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .link-mobile {
+            font-size: 1.6rem;
+            color: var(--title-color);
+            font-weight: 400;
+            text-transform: capitalize;
+
+            .icon-angleRight {
+                margin-right: 10px;
+                font-size: 1.4rem;
+            }
+        }
+
+        .icon-toggle {
+            font-size: 1.2rem;
+            padding: 5px;
+            background-color: #f3f7fb;
+            border-radius: 50%;
+            transition: var(--transition);
+        }
+    }
+
+    .item-mobile:last-child {
+        border-bottom: none;
+    }
+
+    .submenu {
+        .submenu-item {
+            border-bottom: 1px solid #fdedf1;
+            padding: 12px 0;
+            padding-left: 20px;
+
+            .icon-angleRight {
+                margin-right: 10px;
+                font-size: 1.4rem;
+            }
+        }
+    }
+
+    .custom-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        display: flex;
+        justify-content: start !important;
+        align-items: unset !important;
+        z-index: 999999;
+    }
+
+    .custom-modal {
+        width: 40%;
+        padding: 0 !important;
+        border-radius: 0px !important;
+        border-right: 3px solid var(--theme-color);
+        animation: slideRightToLeft 1s ease !important;
+        transform: translateX(-105%);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s linear 0.3s;
+    }
+
+    .show {
+        opacity: 1;
+        visibility: visible;
+        transform: translateX(0);
+        transition-delay: 0s;
+    }
+
+    .custom-content {
+        margin: 0 !important;
+    }
+
+    .custom-btn {
+        position: absolute;
+        top: 25px !important;
+        right: -17.5px !important;
+        color: var(--white-color);
+        background-color: var(--theme-color) !important;
+        border-radius: 50%;
+        width: 33px;
+        height: 33px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    @keyframes slideRightToLeft {
+        0% {
+            transform: translateX(-100%);
+        }
+        100% {
+            transform: translateX(0);
+        }
+    }
+
+    @keyframes slideDown {
+        from {
+            max-height: 0;
+            opacity: 0;
+            transform: translateY(-10px);
+        }
+        to {
+            max-height: 200px; /* Điều chỉnh tùy nội dung */
+            opacity: 1;
+            transform: translateX(0);
+        }
+    }
+
+    @keyframes slideUp {
+        from {
+            max-height: 200px;
+            opacity: 1;
+            transform: translateX(0);
+        }
+        to {
+            max-height: 0;
+            opacity: 0;
+            transform: translateY(-10px);
+        }
+    }
 }
 
 // PC & Laptop lớn (1280px trở xuống)
